zokrates_cli/examples/compile_errors/generics/infer_return_call_generics.zok
def foo<N>() -> field[N] {
   return [42; N];
}

def main() -> field[2] {
   return foo(); // N is currently not infered to 2 here
}
